started with testing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,13 @@ services:
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
+      - static_volume:/app/staticfiles
+      - media_volume:/app/media
     ports:
       - "8000:8000"
     environment:
       - DEBUG=True
+
+volumes:
+  static_volume:
+  media_volume:
