added ai for image recognition

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,10 @@ DATABASE_URL=sqlite:///db.sqlite3
 CORS_ALLOW_ALL_ORIGINS=True
 # If CORS_ALLOW_ALL_ORIGINS=False, specify allowed origins:
 # CORS_ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
+
+# OpenAI Configuration (for wine label analysis)
+OPENAI_API_KEY=sk-your-openai-api-key-here
+# Optional: specify model (default: gpt-4o)
+# OPENAI_MODEL=gpt-4o
+# Optional: max image dimension in pixels (default: 1024)
+# OPENAI_MAX_IMAGE_SIZE=1024
